# CodeQL_client

./: .gitignore  README.md  config.yml  entrypoint.py
src/CodeQL/: analyze.py  preprocess.py
tests/src_cpp/: .gitignore  CMakeLists.txt  README.md  TODO.txt  builder-resources.list  builder.config  builder.sh  macros.cmake
tests/src_cpp/Engine/: CMakeLists.txt  Hoopoe.h
tests/src_cpp/Engine/Core/include/: Application.h  ConfigFile.h  CoreHeaders.h  CorePrerequisites.h  DataStream.h  Exception.h  FileSystem.h  LogManager.h  Memory.h  Platform.h  SharedPtr.h  Timer.h  Types.h
tests/src_cpp/Engine/Core/resources/: hoopoe.cfg
tests/src_cpp/Engine/Core/src/: Application.cpp  ConfigFile.cpp  Core.h  DataStream.cpp  Exception.cpp  LogManager.cpp  Timer.cpp
tests/src_cpp/Engine/Core/src/platform/linux/: FileSystemImpl.cpp
tests/src_cpp/Engine/Core/src/platform/win/: FileSystemImpl.cpp
tests/src_cpp/Engine/Core/test/: CMakeLists.txt
tests/src_cpp/Engine/Core/test/include/: TestConfigFile.h  TestFileSystem.h
tests/src_cpp/Engine/Core/test/src/: TestConfigFile.cpp  TestFileSystem.cpp  test.cpp
tests/src_cpp/Engine/Renderer/include/: Graphics.h
tests/src_cpp/Engine/Renderer/src/: Graphics.cpp
tests/src_cpp/Engine/UTest/: CMakeLists.txt
tests/src_cpp/Engine/UTest/include/: TestBase.h  TestReporter.h  TestSuite.h
tests/src_cpp/Engine/UTest/src/: TestReporter.cpp  TestSuite.cpp  UTest.cpp
tests/src_cpp/Engine/UTest/test/: CMakeLists.txt
tests/src_cpp/Engine/UTest/test/src/: TestUTest.cpp  test.cpp
tests/src_cpp/Engine/Utils/include/: String.h
tests/src_cpp/Engine/Utils/src/: String.cpp
tests/src_cpp/Sandbox/: CMakeLists.txt  Sandbox.cpp
tests/src_cpp/Sandbox/Game/: GameHeaders.h
tests/src_cpp/Sandbox/Game/include/: Creature.h  Dialogues.h  DialoguesTool.h  Location.h  Player.h  time.h
tests/src_cpp/Sandbox/Game/resources/sprites/: background.png~
tests/src_cpp/Sandbox/Game/src/: Creature.cpp  Dialogues.cpp  DialoguesTool.cpp  Location.cpp  Player.cpp  time.cpp
